Bug 1587127: Ensure no backplate is drawn for lines that have only visibility:hidden descendants. r=dholbert a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D48725